--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,13 @@ section{
     z-index: 100;
     pointer-events: none;
 }
+
+.side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(pau.jpg);
+    background-size: cover;
+}
