adding clip path to side 1 and side 2 classes

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,11 @@ section{
     background: url(pau.jpg);
     background-size: cover;
 }
+
+.side1 {
+    clip-path: polygon(0 0, 55% 1%, 24% 11%, 56% 13%, 35% 26%, 57% 37%, 30% 41%, 58% 51%, 27% 59%, 55% 70%, 28% 77%, 60% 86%, 30% 91%, 66% 97%, 0 100%);
+}
+
+.side2{
+    clip-path: polygon(100% 0, 55% 1%, 24% 11%, 56% 13%, 35% 26%, 57% 37%, 30% 41%, 58% 51%, 27% 59%, 55% 70%, 28% 77%, 60% 86%, 30% 91%, 66% 97%, 100% 100%);
+}
